--- a/dist-common/Cargo.toml
+++ b/dist-common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dist-server"
+name = "dist-common"
 version = "0.1.0"
 authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
 edition = "2018"
@@ -9,7 +9,6 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.40"
 diesel = { version = "1.4", features = ["sqlite"] }
-dist-common = { version = "0.1.0", path = "../dist-common" }
 dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
