--- a/dist-common/Cargo.toml
+++ b/dist-common/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.40"
 diesel = { version = "1.4", features = ["sqlite"] }
 dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 shell-escape = "0.1.5"
 tempfile = "3.2.0"
+thiserror = "1.0.24"
