--- a/dist-common/Cargo.toml
+++ b/dist-common/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 diesel = { version = "1.4", features = ["sqlite"] }
-dotenv = "0.15"
+dirs-next = "2.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 shell-escape = "0.1.5"
