--- a/dist-db/Cargo.toml
+++ b/dist-db/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dist-common"
+name = "dist-db"
 version = "0.1.0"
 authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
 edition = "2018"
