--- a/imdl-wrapper/Cargo.toml
+++ b/imdl-wrapper/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dist-server"
+name = "imdl-wrapper"
 version = "0.1.0"
 authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
 edition = "2018"
@@ -7,10 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.40"
-diesel = { version = "1.4", features = ["sqlite"] }
-imdl-wrapper = { version = "0.1.0", path = "../imdl-wrapper" }
-dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 shell-escape = "0.1.5"
