--- a/dist-server/Cargo.toml
+++ b/dist-server/Cargo.toml
@@ -7,11 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.40"
-diesel = { version = "1.4", features = ["sqlite"] }
+clap = "3.0.0-beta.2"
 imdl-wrapper = { version = "0.1.0", path = "../imdl-wrapper" }
-dotenv = "0.15"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-shell-escape = "0.1.5"
-tempfile = "3.2.0"
