--- a/imdl-wrapper/Cargo.toml
+++ b/imdl-wrapper/Cargo.toml
@@ -10,4 +10,4 @@ edition = "2018"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 shell-escape = "0.1.5"
-tempfile = "3.2.0"
+thiserror = "1.0.24"
