--- a/dist-client/Cargo.toml
+++ b/dist-client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dist-db"
+name = "dist-client"
 version = "0.1.0"
 authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
 edition = "2018"
@@ -8,9 +8,3 @@ edition = "2018"
 
 [dependencies]
 diesel = { version = "1.4", features = ["sqlite"] }
-dirs-next = "2.0.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-shell-escape = "0.1.5"
-tempfile = "3.2.0"
-thiserror = "1.0.24"
