--- a/dist-package/Cargo.toml
+++ b/dist-package/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+fs_extra = "1.2.0"
+imdl-wrapper = { version = "0.1.0", path = "../imdl-wrapper" }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 thiserror = "1.0.24"
