--- a/dist-server/Cargo.toml
+++ b/dist-server/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.40"
 clap = "3.0.0-beta.2"
+dist-package = { version = "0.1.0", path = "../dist-package" }
 dist-package-db = { version = "0.1.0", path = "../dist-package-db" }
 imdl-wrapper = { version = "0.1.0", path = "../imdl-wrapper" }
