--- a/dist-package-db/Cargo.toml
+++ b/dist-package-db/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 diesel = { version = "1.4", features = ["sqlite"] }
 diesel_migrations = { version = "1.4", features = ["sqlite"] }
-dirs-next = "2.0.0"
+dist-package = { version = "0.1.0", path = "../dist-package" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 shell-escape = "0.1.5"
