--- a/named-file-server/Cargo.toml
+++ b/named-file-server/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2018"
 [dependencies]
 async-std = { version = "1.9.0", features = ["attributes"] }
 clap = "3.0.0-beta.2"
+log = "0.4.14"
+stderrlog = "0.5.1"
 tide = "0.16.0"
