--- a/dist-client/Cargo.toml
+++ b/dist-client/Cargo.toml
@@ -9,5 +9,9 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.40"
 clap = "3.0.0-beta.2"
+dist-utils = { version = "0.1.0", path = "../dist-utils" }
 log = "0.4.14"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8.17"
 stderrlog = "0.5.1"
+ureq = "2.1.0"
