--- a/dist-server/Cargo.toml
+++ b/dist-server/Cargo.toml
@@ -15,3 +15,4 @@ dist-utils = { version = "0.1.0", path = "../dist-utils" }
 imdl-wrapper = { version = "0.1.0", path = "../imdl-wrapper" }
 log = "0.4.14"
 stderrlog = "0.5.1"
+sysinfo = "0.17.1"
