--- a/transmission-wrapper/Cargo.toml
+++ b/transmission-wrapper/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dist-utils"
+name = "transmission-wrapper"
 version = "0.1.0"
 authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
 edition = "2018"
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dirs-next = "2.0.0"
+dist-utils = { version = "0.1.0", path = "../dist-utils" }
 sysinfo = "0.17.1"
