Transfer size and torrent name for packages

--- a/dist-package-db/Cargo.toml
+++ b/dist-package-db/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 diesel = { version = "1.4", features = ["sqlite"] }
 diesel_migrations = { version = "1.4", features = ["sqlite"] }
 dist-package = { version = "0.1.0", path = "../dist-package" }
+getset = "0.1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 shell-escape = "0.1.5"
