--- a/dist-server/Cargo.toml
+++ b/dist-server/Cargo.toml
@@ -12,8 +12,9 @@ clap = "3.0.0-beta.2"
 dist-package = { version = "0.1.0", path = "../dist-package" }
 dist-package-db = { version = "0.1.0", path = "../dist-package-db" }
 dist-utils = { version = "0.1.0", path = "../dist-utils" }
-imdl-wrapper = { version = "0.1.0", path = "../imdl-wrapper" }
 log = "0.4.14"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8.17"
 stderrlog = "0.5.1"
 sysinfo = "0.17.1"
 transmission-wrapper = { version = "0.1.0", path = "../transmission-wrapper" }
